--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <name>Spring Property AWS SSM Resolver</name>
     <description>Spring add-on that fetches Spring properties with a certain prefix from the AWS SSM Parameter Store</description>
-    <url></url>
+    <url>https://github.com/NitorCreations/spring-property-aws-ssm-resolver.git</url>
     <inceptionYear>2017</inceptionYear>
 
     <organization>
@@ -42,18 +42,15 @@
     </developers>
 
     <scm>
-        <connection>scm:git:</connection>
-        <developerConnection>scm:git:</developerConnection>
-        <url></url>
+        <connection>scm:git:https://github.com/NitorCreations/spring-property-aws-ssm-resolver.git</connection>
+        <developerConnection>scm:git:https://github.com/NitorCreations/spring-property-aws-ssm-resolver.git</developerConnection>
+        <url>https://github.com/NitorCreations/spring-property-aws-ssm-resolver.git</url>
         <tag>HEAD</tag>
     </scm>
 
     <properties>
         <java.version>1.8</java.version>
         <maven.site.skip>true</maven.site.skip>
-
-        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     </properties>
 
     <dependencies>
@@ -69,30 +66,8 @@
         </dependency>
     </dependencies>
 
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>ossrh</id>
-            <name>Nexus Release Repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-        </repository>
-    </distributionManagement>
-
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven-release-plugin.version}</version>
-                <configuration>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
